--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -4,5 +4,11 @@
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=tcp:avansict2229380.database.windows.net,1433;Initial Catalog=db2229380;Persist Security Info=False;User ID=KoningAdmin;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
     }
 }
+
+    
+
