--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ env: # Change these settings when you need to
 on:
   push:
     branches:
-      - main
+      - master
       - deployment 
 
   # Allows you to run this workflow manually from the Actions tab.
